<resources>
<string name="app_name">Pereira</string>

<string name="Pereira">Hoteles</string>
<string name="Pereira2">Pereira “la querendona, trasnochadora y morena”</string>

    <string name="Hoteles">Hoteles</string>
    <string name="SanSimon">Un atractivo único dentro de los Hoteles en Pereira y en el Eje Cafetero, exclusivo y confortable ofrece a sus huéspedes una maravillosa experiencia a través de diversos estímulos  Multi-Sensoriales: Auditivos, Olfativos, Kinéticos y Visuales.</string>
    <string name="Soratama">Tendrás a disposición cómodas habitaciones y espaciosas suites, y para el placer de tu paladar, en el restaurante Emperador encontrarás una deliciosa y variada gastronomía.</string>
    <string name="Pinares">Ubicado en Pinares de San Martin el sector más exclusivo y prestigioso de la ciudad,equidistante a los principales centros empresariales, industriales, de salud y comerciales de Pereira</string>
    <string name="Granhote">Ubicado en la zona más prestigiosa de la ciudad de Pereira, a tan solo 80 Mtrs de la Plaza de Bolivar, rodeado de centros financieros, comerciales, restaurantes y vida nocturna</string>
    <string name="Abadia">Hotel cinco estrellas, está situado a solo 10 minutos del aeropuerto internacional Matecaña y ofrece un spa con baño turco, un moderno gimnasio y salas de masaje </string>

    <string name="Bares">Bares</string>
    <string name="beerpub">THE BEER PUB es el mejor bar del centro de Pereira, con música en vivo, cine, karaoke, vídeo conciertos y mucho mas... no nos pierdas de vista...!!!</string>
    <string name="akbar">Un excelente lugar, con buena música, la mejor atención y diferentes clases de cocteles y pasantes  para pasar un rato agradable en compañía de los amigos.</string>
    <string name="barcelona">Cuenta con una variedad de 30 platos, en donde su especialidad son las tapas, cocteles y cervezas españolas.</string>
    <string name="Pizzabar">Café Bar Pizza y Birra, la mejor pizza gourmet de la ciudad, todos los viernes show en vivo, hora loca, todos los días pantalla gigante, y múltiples pantallas para disfrutar nuestros vídeos de música crossover.</string>
    <string name="candida"> ¡La esquina que más te sorprenderá de la circunvalar!</string>

    <string name="Sitios">Sitios Turisticos</string>
    <string name="ecoparque">Está en el centro recreacional Confamiliar, donde se puede interactuar con los animales, fauna y flora del lugar y con la vida agropecuaria de la región.</string>
    <string name="jardinbotanico">(municipio ubicado a unos 45 minutos del centro de la ciudad) cuenta con un sendero ecológico, adornado con la flora y fauna de la región donde se puede ver la vida de la familia cafetera.</string>
    <string name="laguna">Nacimiento del río Otún, que atraviesa la capital Risaraldense, con espectaculares paisajes ,tiene como atractivos el bosque de frailejón, la laguna del Mosquito.</string>
    <string name="reseva">Donde se conservan 4.240 hectáreas de bosque alto andino, con gran variedad de fauna, flora y hermosas cascadas. Es el hábitat del oso de anteojos.</string>

    <string name="demografia">Demografia</string>
    <string name="demografiainfo"> En la anterior figura se puede observar la evolución de la población matecaña por zonas, según censos 1951 – 2005 y proyecciones 2006 a 2012</string>
    <string name="infodemo">Pereira es la capita del departamento de Risaraldas, si comparamos el numero de habitantes de poblacion de Pereira con los del departamento de se puede concluir que ocupa el puesto 1 de los 14 municipios que hay en el departamento y representa el 49,4206 porciento de la población total del departamento de Risaraldas.A nivel nacional,la ciudad de Pereira ocupa el puesto numero 10 de los 1.119 municipios que hay en Colombia y representa un 1,0342 porciento de la población total de todo el país.</string>

    <string name="action_settings">Settings</string>
<string name="title_activity_bares">Bares</string>
<string name="title_activity_hoteles">Hoteles</string>
<string name="About">Acerca de</string>

<string name="title_activity_sitios">Sitios</string>
<string name="title_activity_pizzabar">pizzabar</string>
<string name="title_activity_ana_botella">AnaBotella</string>
    <string name="Informacion">Diseñador de la APP</string>
    <string name="publicidad">Porque ir a Pereira ...</string>
    <string name="menu">Menu</string>
    <string name="rumba">¿Te gusta una noche de rumba inolvidable con tus amigos? Pues Pereira tiene los mejores lugares en su conocida Avenida Circunvalar; donde se encuentran los mejores bares y discotecas de la ciudad. Además termina en el parque La Rebeca donde puedes probar uno de los mejores Cholados de Colombia.</string>
   <string name="comida"> ¿Has probado las arepas de chocolo? La Calle Real de la Arepa es un excelente lugar para comer acompañado. Ubicada en el kilómetro 11 vía Pereira-Cerritos. Allí encontrarás excelentes restaurantes de asados cuya especialidad es la deliciosa arepa de chocolo.</string>
   <string name="diversion">Si eres amante de la adrenalina y  los deportes extremos y quieres un excelente lugar para compartir con tu familia y amigos. Karting Cross es un parque de atracciones donde cualquier persona puede divertirse, ya sea en las pistas, en la montaña rusa, jugando paintball u otros deportes extremos.</string>
    <string name="irapereira">Porque ir a pereira...</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beerpub">beerpub</string>
    <string name="title_activity_akbar">akbar</string>
    <string name="title_activity_barcelona">barcelona</string>
    <string name="title_activity_lista__hoteles">Lista_Hoteles</string>
    <string name="title_activity_san_simon">SanSimon</string>
    <string name="title_activity_soratama">Soratama</string>
    <string name="title_activity_pinares">Pinares</string>
    <string name="title_activity_el_gran_hotel">ElGranHotel</string>
    <string name="title_activity_abadia_plaza">AbadiaPlaza</string>
    <string name="title_activity_sitios_turisticos">SitiosTuristicos</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_demografia">Demografia</string>
    <string name="title_activity_publicidad">Publicidad</string>

</resources>
