<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/irapereira"
            android:layout_marginTop="20dp"
            android:textSize="35dp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:textColor="@color/greenyellow"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/rumba"
        android:background="@drawable/rumba"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:textColor="@color/whitesmoke"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/comida"
            android:background="@drawable/comida"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:textColor="@color/whitesmoke"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/diversion"
            android:background="@drawable/diversion"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:textColor="@color/whitesmoke"/>
    </LinearLayout>

</ScrollView>
