<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textColor="@color/green"
        android:textSize="35dp"
        android:gravity="center"
        android:text="@string/demografia"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/demografia"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:textStyle="italic"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:textColor="@color/black"
    android:textSize="12dp"
    android:gravity="center"
    android:text="@string/demografiainfo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:gravity="center"
        android:text="@string/infodemo"/>
</LinearLayout>
  </ScrollView>
